--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
   traefik:
     image: "traefik:v2.10"
     container_name: "traefik"
+    restart: unless-stopped
     command:
       - "--log.level=DEBUG"
       - "--accesslog=true"
